# openclaw-watchboard

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
backend/: package.json
backend/src/: index.ts
data/vuls/: openclaw_vuls.csv  openclaw_vuls_annotated.csv
deploy/: ecosystem.config.cjs  nginx.clawsec.conf
docs/: deploy-cn.md
frontend/: package.json  tsconfig.json
frontend/config/: config.ts  defaultSettings.ts  proxy.ts  routes.ts
frontend/src/: app.tsx  manifest.json
scripts/: analyze_clawhub_skills.py  analyze_csv_skills.py  analyze_exposure_data.py  analyze_vulnerabilities.py  export_domestic_vulnerable_exposures.py  export_skills_name_maintainer_excel.py  fetch_gendigital_skills.py  fetch_skills_sh_data.py  fetch_skills_sh_rankings.py  generate_skills_source_chart.py  generate_statistics.py  import_external_skills_to_db.py  import_nginx_access_to_analytics.py  import_vulnerabilities_to_db.py  location_normalizer.py  normalize_exposure_locations.py  run_analysis.py  run_nightly_refresh.sh  run_openclaw_probe_pipeline.sh  serve_site.js  setup_database.py  sync_code_to_server.sh  sync_databases_to_server.sh  sync_databases_to_tencent.sh  sync_release_to_server.sh  update_openclaw_vulnerabilities.py
shared/: package.json
shared/src/: index.ts
tools/openclaw-probe/: README.md  cli.py  common.py  constants.py  exporters.py  fofa.py  fofa_incremental_updater.py  (+4 more)
tools/openclaw-scan/: README.md  openclaw_security_report.md  openclaw_vulnerabilities_1.csv  pyproject.toml  scan.py
(+55 files in other folders)
