[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-scan"
version = "0.1.0"
description = "Host-side deployment security scanner for OpenClaw"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["websocket-client>=1.8.0"]

[project.scripts]
openclaw-scan = "scan:main"

[tool.setuptools]
py-modules = ["scan"]

[tool.setuptools.package-data]
"*" = ["openclaw_vulnerabilities_1.csv"]
